--- a/settings.gradle
+++ b/settings.gradle
@@ -7,5 +7,5 @@
  * in the user manual at https://docs.gradle.org/7.1/userguide/multi_project_builds.html
  */
 
-rootProject.name = 'today-study'
+rootProject.name = 'final-project-backup'
 include('app')
