--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,9 @@ repositories {
 dependencies {
  // Google gson 라이브러리
     implementation 'com.google.code.gson:gson:2.8.8'
+    // java mail api 라이브러리
+    // https://mvnrepository.com/artifact/javax.mail/mail
+    implementation 'javax.mail:mail:1.4.7'
     testImplementation 'junit:junit:4.13.2'
     implementation 'com.google.guava:guava:30.1-jre'
 }
