1027 push 자유게시판 첨부파일 삭제,등록 기능 완료 / 서블릿 들어갈 준비 완료

--- a/app-client/build.gradle
+++ b/app-client/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     
     // Mybatis
     implementation 'org.mybatis:mybatis:3.5.7'
+    
     // MariaDB JDBC 드라이버
     implementation 'org.mariadb.jdbc:mariadb-java-client:2.7.4'
 
@@ -40,11 +41,13 @@ dependencies {
     
     // MSSQL JDBC Driver
     implementation 'com.microsoft.sqlserver:mssql-jdbc:9.4.0.jre11'
+    
     // Google gson 라이브러리
     implementation 'com.google.code.gson:gson:2.8.8'
-    // java mail api 라이브러리
-    // https://mvnrepository.com/artifact/javax.mail/mail
+    
+    // java mail api 라이브러리 https://mvnrepository.com/artifact/javax.mail/mail
     implementation 'javax.mail:mail:1.4.7'
+    
     testImplementation 'junit:junit:4.13.2'
     implementation 'com.google.guava:guava:30.1-jre'
 }
