--- a/app-server/build.gradle
+++ b/app-server/build.gradle
@@ -1,8 +1,8 @@
 // Gradle 도구에 추가할 작업이 있으면 플러그인을 장착하라!
 plugins {
-    //id 'java'  // 자바 애플리케이션 빌드 관련 작업들을 추가한다.
-    id 'application' // = 'java' 플러그인 + 애플리케이션 관련 작업 
-    id 'eclipse' // 이클립스 IDE 관련 작업
+    id 'java'  // 자바 애플리케이션 빌드 관련 작업들을 추가한다.
+    id 'eclipse-wtp' // 이클립스 IDE용 웹 프로젝트 관련 파일을 만들 떄 사용할 도구가 들어 있는 플러그인 장착
+    id 'war' // 웹 애플리케이션의 배포 파일을 생성하는 작업을 수행할 플러그인 장작
 }
 
 // eclipse 프로젝트 이름을 설정하기
@@ -10,6 +10,12 @@ eclipse {
     project {
         name = "today-study-server"
     }
+}
+
+// 서블릿 컨데이너에 배치할 때 사용할 웹 에플리케이션 이름을 설정한다.
+// 이 이름은 .war 배치 파일을 만들 때도 사용한다.
+war {
+  archiveBaseName = "ogong"
 }
 
 // 자바 소스를 컴파일 할 때 적용할 옵션
@@ -29,18 +35,22 @@ repositories {
 //    등록한 라이브러를 자동으로 다운로드 받는다.
 // => 이렇게 다운로드 받은 라이브러리는 컴파일하거나 실행할 때 사용된다.
 dependencies {
- // Google gson 라이브러리
+   // 서블릿 API
+    implementation 'javax.servlet:javax.servlet-api:4.0.1'
+ 
+    // Google JSON 라이브러리
     implementation 'com.google.code.gson:gson:2.8.8'
-    // java mail api 라이브러리
-    // https://mvnrepository.com/artifact/javax.mail/mail
+      
+    // MariaDB JDBC 드라이버
+    implementation 'org.mariadb.jdbc:mariadb-java-client:2.7.4'
+    
+    // Mybatis 퍼시스턴스 프레임워크
+    implementation 'org.mybatis:mybatis:3.5.7'
+  
+     // java mail api 라이브러리 https://mvnrepository.com/artifact/javax.mail/mail
     implementation 'javax.mail:mail:1.4.7'
-    testImplementation 'junit:junit:4.13.2'
+    
     implementation 'com.google.guava:guava:30.1-jre'
-}
-
-// 'application' 플러그인에서 run 작업을 수행할 때 사용할 
-// 클래스 이름을 지정한다.
-application {
-    mainClass = 'com.ogong.pms.ServerApp'
+    testImplementation 'junit:junit:4.13.2'
 }
 
