--- a/app-server/build.gradle
+++ b/app-server/build.gradle
@@ -44,7 +44,9 @@ dependencies {
   //    => 테스트 소스를 컴파일 할 때만 사용, 배포에서 제외한다.
 
   // 서블릿 API
-  implementation 'javax.servlet:javax.servlet-api:4.0.1'
+  // - 서블릿 컨테이너에 있는 라이브러리다. 따라서 배포할 때 제외해야 한다.
+  // - 프로그램을 개발하는 동안 컴파일할 때 사용해야 하기 때문에 providedCompile 로 설정한다.
+  providedCompile 'javax.servlet:javax.servlet-api:4.0.1'
  
   // JSP API
   // - 서블릿 컨테이너에 있는 라이브러리다. 따라서 배포할 때 제외해야 한다.
