--- a/app-server/src/main/webapp/package.json
+++ b/app-server/src/main/webapp/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fullcalendar/core": "^5.10.1",
+    "@fullcalendar/daygrid": "^5.10.1",
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.1.3",
     "chart.js": "^3.6.0",
