1110 push 공지게시판 파일 업데이트 안 됨

--- a/app-server/build.gradle
+++ b/app-server/build.gradle
@@ -64,6 +64,9 @@ dependencies {
   
   // Mybatis 퍼시스턴스 프레임워크
   implementation 'org.mybatis:mybatis:3.5.7'
+  
+  // Thumbnailator 썸네일 생성 라이브러리
+  implementation 'net.coobird:thumbnailator:0.4.14'
 
   // java mail api 라이브러리 https://mvnrepository.com/artifact/javax.mail/mail
   implementation 'javax.mail:mail:1.4.7'
