--- a/app-server/build.gradle
+++ b/app-server/build.gradle
@@ -81,8 +81,14 @@ dependencies {
   implementation 'org.apache.logging.log4j:log4j-core:2.14.1'
 
   // java mail api 라이브러리 https://mvnrepository.com/artifact/javax.mail/mail
-  implementation 'javax.mail:mail:1.4.7'
+  //implementation 'javax.mail:mail:1.4.7'
+  //implementation 'org.springframework:spring-context-support:5.2.0.RELEASE'
+  
+  implementation 'com.sun.mail:javax.mail:1.4.7'
+  implementation 'org.springframework:spring-context-support:5.2.6.RELEASE'
   
   implementation 'com.google.guava:guava:30.1-jre'
   testImplementation 'junit:junit:4.13.2'
+  
+  
 }
