--- a/app-server/build.gradle
+++ b/app-server/build.gradle
@@ -90,5 +90,6 @@ dependencies {
   implementation 'com.google.guava:guava:30.1-jre'
   testImplementation 'junit:junit:4.13.2'
   
-  
+  // 파일 첨부
+  implementation group: 'commons-io', name: 'commons-io', version: '2.6'
 }
