--- a/app-server/src/main/webapp/package.json
+++ b/app-server/src/main/webapp/package.json
@@ -12,6 +12,7 @@
     "@fullcalendar/core": "^5.10.1",
     "@fullcalendar/daygrid": "^5.10.1",
     "@popperjs/core": "^2.10.2",
+    "blueimp-file-upload": "^10.32.0",
     "bootstrap": "^5.1.3",
     "chart.js": "^3.6.0",
     "jquery": "^3.6.0",
