--- a/app-server/build.gradle
+++ b/app-server/build.gradle
@@ -90,4 +90,7 @@ dependencies {
   implementation 'com.google.guava:guava:30.1-jre'
   testImplementation 'junit:junit:4.13.2'
   
+  // 구글 로그인 연동 (서버측에 요청 및 응답을 받기 위해)
+  // implementation 'org.projectlombok:lombok:1.18.22'
+
 }
